--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-spring-boot -->
+		<!-- <dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-spring-boot</artifactId>
+		    <version>2.18.0</version>
+		</dependency>-->
+		
 	</dependencies>
 
 	<build>
